# conformalbayes

./: .gitignore  README.md  pyproject.toml
notebooks/: diabetes.py  power.py  protein.py
src/conformalbayes/: core.py  utils.py
src/stan/: linear  linear.stan
